--- a/prometheus-config.yaml
+++ b/prometheus-config.yaml
@@ -34,13 +34,13 @@ data:
         static_configs:
         - targets: ['localhost:9090']
 
-    # remote storage details. For PromLTS accounts these can be
-    # found at https://app.promlts.com/quickstart/
+    # remote storage details. For Metricfire accounts these can be
+    # found at https://app.metricfire.com/quickstart/
     
     remote_read:
-        - url: https://remote.promlts.com/read
-          bearer_token: <PromLTS-API-Key>
+        - url: https://remote.metricfire.com/read
+          bearer_token: <metricfire-API-Key>
 
     remote_write:
-        - url: https://remote.promlts.com/write
-          bearer_token: <PromLTS-API-Key>
+        - url: https://remote.metricfire.com/write
+          bearer_token: <metricfire-API-Key>
