--- a/node-exporter-daemonset.yml
+++ b/node-exporter-daemonset.yml
@@ -6,6 +6,9 @@ metadata:
   labels:
     name: node-exporter
 spec:
+  selector:
+    matchLabels:  
+      name: node-exporter
   template:
     metadata:
       labels:
